// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ready only mode correctly 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "API Keys",
      "to": "/account/api-keys",
    }
  }
  empty={Object {}}
>
  <Banner
    status="info"
    title="This API Key is read-only"
  >
    <p>
      This API Key is only editable by the owner: 
      johndoe
      .
    </p>
  </Banner>
  <Panel>
    <withRouter(Connect(ReduxForm))
      apiKey={
        Object {
          "id": "id1",
          "username": "johndoe",
        }
      }
      isReadOnly={true}
      onSubmit={[Function]}
    />
  </Panel>
</Page>
`;

exports[`should render loading component while loading 1`] = `<Loading />`;

exports[`should render not found pane when api key can not be found 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "API Keys",
      "to": "/account/api-keys",
    }
  }
  empty={Object {}}
>
  <Panel>
    <Banner
      status="warning"
      title="Not found"
    >
      <p>
        API Key was not found.
      </p>
    </Banner>
  </Panel>
</Page>
`;
